Bug Fixes & GUI Finalized

--- a/src/Win Info.csproj
+++ b/src/Win Info.csproj
@@ -153,5 +153,8 @@
   <ItemGroup>
     <Resource Include="Resources\NIC.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Feature.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
